--- a/task-3-basic-html/css/style.css
+++ b/task-3-basic-html/css/style.css
@@ -30,12 +30,11 @@ body{
 }
 
 .second-container-left {
-  width: 30%;
-  padding: 1%;
+  min-width: 30%;
   text-align: center;
   font-weight: bold;
   font-style: italic;
-  /* margin: auto; */
+  margin-top: 3%;
 }
 
 .grid-template{
@@ -69,4 +68,10 @@ body{
 
 .second-main-component-class{
   background-color: rgb(204, 235, 235); margin-top: 5%;padding: 1%;
+}
+
+
+
+.second-container-first-div{
+  margin-top: 1%;margin-right: 2%;
 }
