task-9-js logic and styling done

--- a/task-9-javascript/css/style.css
+++ b/task-9-javascript/css/style.css
@@ -33,3 +33,10 @@ button{
 }
 
 
+.split-button{
+    margin-top: 4px; background-color: white; padding: 2px;
+}
+
+.color-shades-div{
+    margin-top: 40px;display: flex;column-gap: 4px;
+}
